--- a/class02/index.html
+++ b/class02/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LS02 数据类型、值与变量</title>
+    <title>class02 数据类型、值与变量</title>
     
 </head>
 <body>
 
 </body>
     <!--<script src="./js/demo01.js"></script>-->
-    <script src="js/demo1.js"></script>
+    <script src="js/demo2.js"></script>
     <!--<script src="./js/demo03.js"></script>-->
     <!--<script src="./js/demo04.js"></script>-->
     <!--<script src="./js/demo05.js"></script>-->
